Multiple Changes including adding API, and also making Chip demo better
Colors chips to make the demo prettier, and then also adds all new information about different phones to the Detail,

--- a/app/src/main/res/drawable/bg_button.xml
+++ b/app/src/main/res/drawable/bg_button.xml
@@ -1,5 +1,5 @@
 <shape xmlns:android="http://schemas.android.com/apk/res/android"
     android:shape="rectangle">
-    <solid android:color="@color/grey_200" />
+    <solid android:color="@color/color_accent" />
     <corners android:topRightRadius="@dimen/card_corner_rad"  android:topLeftRadius="@dimen/card_corner_rad"></corners>
 </shape>
