Updates to UI after API changes
This adjusts the UI to a more modern feel including chips for label markers, usage of horizontal cards, and also a subtle gradient background.

--- a/app/src/main/res/layout/include_scaletext_layout.xml
+++ b/app/src/main/res/layout/include_scaletext_layout.xml
@@ -15,7 +15,8 @@
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:orientation="vertical">
+        android:orientation="vertical"
+        android:background="@drawable/bg_gradient_lightred">
 
         <RelativeLayout
             android:layout_width="match_parent"
