--- a/app/src/main/res/layout/include_chip_card.xml
+++ b/app/src/main/res/layout/include_chip_card.xml
@@ -4,9 +4,7 @@
     xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     android:id="@+id/chip_card"
-    android:layout_width="match_parent"
-    android:layout_height="wrap_content"
-    android:layout_margin="@dimen/card_margin"
+    style="@style/card_style"
     app:cardCornerRadius="@dimen/card_corner_rad"
     app:cardElevation="@dimen/card_elevation"
     app:cardUseCompatPadding="true"
@@ -22,8 +20,8 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_marginBottom="8dp"
-            android:text="@string/chips"
-            android:textAppearance="?textAppearanceHeadline6" />
+            android:text="Chips are compact elements that represent an input, attribute, or action"
+            android:textAppearance="?textAppearanceBody1" />
 
         <TextView
             android:layout_width="match_parent"
