--- a/app/src/main/res/layout/activity_detail.xml
+++ b/app/src/main/res/layout/activity_detail.xml
@@ -82,8 +82,8 @@
                         android:id="@+id/info1_card"
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
-                        android:layout_marginTop="8dp"
                         android:layout_marginLeft="8dp"
+                        android:layout_marginTop="8dp"
                         android:layout_marginRight="8dp"
                         app:cardCornerRadius="@dimen/card_corner_rad"
                         app:cardElevation="@dimen/card_elevation"
@@ -154,7 +154,7 @@
 
                                 <TextView
                                     android:id="@+id/spec_video"
-                                    style="@style/specItem"/>
+                                    style="@style/specItem" />
 
                             </com.google.android.material.card.MaterialCardView>
 
@@ -200,139 +200,187 @@
                         app:chipStrokeColor="@color/black"
                         app:chipStrokeWidth="1dp" />
 
+
+                    <com.google.android.material.card.MaterialCardView
+                        android:layout_width="match_parent"
+                        android:layout_height="match_parent"
+                        app:cardCornerRadius="@dimen/card_corner_rad"
+                        app:cardElevation="@dimen/card_elevation"
+                        android:layout_marginLeft="8dp"
+                        android:layout_marginRight="8dp"
+                        app:cardUseCompatPadding="true">
+
                         <LinearLayout
                             android:layout_width="match_parent"
                             android:layout_height="wrap_content"
                             android:orientation="vertical">
 
-                            <HorizontalScrollView
-                                android:layout_width="match_parent"
-                                android:layout_height="wrap_content">
-
-                                <LinearLayout
-                                    android:layout_width="match_parent"
-                                    android:layout_height="wrap_content"
-                                    android:orientation="horizontal">
-
-                                    <com.google.android.material.card.MaterialCardView
-                                        android:layout_width="wrap_content"
-                                        android:layout_height="wrap_content"
-                                        android:layout_marginStart="8dp"
-                                        android:layout_marginLeft="8dp"
-                                        app:cardCornerRadius="@dimen/card_corner_rad"
-                                        app:cardElevation="@dimen/card_elevation"
-                                        app:cardUseCompatPadding="true">
-
-                                        <TextView
-                                            android:id="@+id/spec_cpu"
-                                            style="@style/specItemStyle" />
-
-                                    </com.google.android.material.card.MaterialCardView>
-
-                                    <com.google.android.material.card.MaterialCardView
-                                        android:layout_width="wrap_content"
-                                        android:layout_height="match_parent"
-                                        app:cardCornerRadius="@dimen/card_corner_rad"
-                                        app:cardElevation="@dimen/card_elevation"
-                                        app:cardUseCompatPadding="true">
-
-                                        <TextView
-                                            android:id="@+id/spec_memory"
-                                            style="@style/specItemStyle" />
-                                    </com.google.android.material.card.MaterialCardView>
-                                </LinearLayout>
-                            </HorizontalScrollView>
-
-                            <HorizontalScrollView
-                                android:layout_width="match_parent"
-                                android:layout_height="wrap_content">
-
-                                <LinearLayout
-                                    android:layout_width="match_parent"
-                                    android:layout_height="wrap_content"
-                                    android:orientation="horizontal">
-
-                                    <com.google.android.material.card.MaterialCardView
-                                        android:layout_width="wrap_content"
-                                        android:layout_height="wrap_content"
-                                        android:layout_marginStart="8dp"
-                                        android:layout_marginLeft="8dp"
-                                        app:cardCornerRadius="@dimen/card_corner_rad"
-                                        app:cardElevation="@dimen/card_elevation"
-                                        app:cardUseCompatPadding="true">
-
-                                        <TextView
-                                            android:id="@+id/spec_size"
-                                            style="@style/specItemStyle" />
-
-                                    </com.google.android.material.card.MaterialCardView>
-
-                                    <com.google.android.material.card.MaterialCardView
-                                        android:layout_width="wrap_content"
-                                        android:layout_height="match_parent"
-                                        app:cardCornerRadius="@dimen/card_corner_rad"
-                                        app:cardElevation="@dimen/card_elevation"
-                                        app:cardUseCompatPadding="true">
-
-                                        <TextView
-                                            android:id="@+id/spec_weight"
-                                            style="@style/specItemStyle" />
-                                    </com.google.android.material.card.MaterialCardView>
-
-                                    <com.google.android.material.card.MaterialCardView
-                                        android:layout_width="wrap_content"
-                                        android:layout_height="match_parent"
-                                        app:cardCornerRadius="@dimen/card_corner_rad"
-                                        app:cardElevation="@dimen/card_elevation"
-                                        app:cardUseCompatPadding="true">
-
-                                        <TextView
-                                            android:id="@+id/spec_dimen"
-                                            style="@style/specItemStyle" />
-                                    </com.google.android.material.card.MaterialCardView>
-                                </LinearLayout>
-                            </HorizontalScrollView>
-
-                            <HorizontalScrollView
+                            <LinearLayout
                                 android:layout_width="match_parent"
                                 android:layout_height="wrap_content"
-                                android:paddingBottom="8dp">
+                                android:orientation="horizontal"
+                                android:weightSum="2">
 
-                                <LinearLayout
-                                    android:layout_width="match_parent"
-                                    android:layout_height="wrap_content"
-                                    android:orientation="horizontal">
+                                <TextView
+                                    android:id="@+id/spec_cpu"
+                                    style="@style/specItemStyle"
+                                    android:layout_weight="1" />
 
-                                    <com.google.android.material.card.MaterialCardView
-                                        android:layout_width="wrap_content"
-                                        android:layout_height="wrap_content"
-                                        android:layout_marginStart="8dp"
-                                        android:layout_marginLeft="8dp"
-                                        app:cardCornerRadius="@dimen/card_corner_rad"
-                                        app:cardElevation="@dimen/card_elevation"
-                                        app:cardUseCompatPadding="true">
+                                <TextView
+                                    android:id="@+id/spec_memory"
+                                    style="@style/specItemStyle"
+                                    android:layout_weight="1" />
 
-                                        <TextView
-                                            android:id="@+id/spec_display"
-                                            style="@style/specItemStyle" />
+                            </LinearLayout>
 
-                                    </com.google.android.material.card.MaterialCardView>
+                            <LinearLayout
+                                android:layout_width="match_parent"
+                                android:layout_height="wrap_content"
+                                android:orientation="horizontal"
+                                android:weightSum="2">
 
-                                    <com.google.android.material.card.MaterialCardView
-                                        android:layout_width="wrap_content"
-                                        android:layout_height="match_parent"
-                                        app:cardCornerRadius="@dimen/card_corner_rad"
-                                        app:cardElevation="@dimen/card_elevation"
-                                        app:cardUseCompatPadding="true">
+                                <TextView
+                                    android:id="@+id/spec_display"
+                                    style="@style/specItemStyle"
+                                    android:layout_weight="1" />
 
-                                        <TextView
-                                            android:id="@+id/spec_resolution"
-                                            style="@style/specItemStyle" />
-                                    </com.google.android.material.card.MaterialCardView>
-                                </LinearLayout>
-                            </HorizontalScrollView>
+                                <TextView
+                                    android:id="@+id/spec_resolution"
+                                    style="@style/specItemStyle"
+                                    android:layout_weight="1" />
+
+                            </LinearLayout>
+
+                            <!--<HorizontalScrollView-->
+                            <!--android:layout_width="match_parent"-->
+                            <!--android:layout_height="wrap_content">-->
+
+                            <!--<LinearLayout-->
+                            <!--android:layout_width="match_parent"-->
+                            <!--android:layout_height="wrap_content"-->
+                            <!--android:orientation="horizontal">-->
+
+                            <!--<com.google.android.material.card.MaterialCardView-->
+                            <!--android:layout_width="wrap_content"-->
+                            <!--android:layout_height="wrap_content"-->
+                            <!--android:layout_marginStart="8dp"-->
+                            <!--android:layout_marginLeft="8dp"-->
+                            <!--app:cardCornerRadius="@dimen/card_corner_rad"-->
+                            <!--app:cardElevation="@dimen/card_elevation"-->
+                            <!--app:cardUseCompatPadding="true">-->
+
+                            <!--<TextView-->
+                            <!--android:id="@+id/spec_cpu"-->
+                            <!--style="@style/specItemStyle" />-->
+
+                            <!--</com.google.android.material.card.MaterialCardView>-->
+
+                            <!--<com.google.android.material.card.MaterialCardView-->
+                            <!--android:layout_width="wrap_content"-->
+                            <!--android:layout_height="match_parent"-->
+                            <!--app:cardCornerRadius="@dimen/card_corner_rad"-->
+                            <!--app:cardElevation="@dimen/card_elevation"-->
+                            <!--app:cardUseCompatPadding="true">-->
+
+                            <!--<TextView-->
+                            <!--android:id="@+id/spec_memory"-->
+                            <!--style="@style/specItemStyle" />-->
+                            <!--</com.google.android.material.card.MaterialCardView>-->
+                            <!--</LinearLayout>-->
+                            <!--</HorizontalScrollView>-->
+
+
+                            <!--<HorizontalScrollView-->
+                            <!--android:layout_width="match_parent"-->
+                            <!--android:layout_height="wrap_content"-->
+                            <!--android:paddingBottom="8dp">-->
+
+                            <!--<LinearLayout-->
+                            <!--android:layout_width="match_parent"-->
+                            <!--android:layout_height="wrap_content"-->
+                            <!--android:orientation="horizontal">-->
+
+                            <!--<com.google.android.material.card.MaterialCardView-->
+                            <!--android:layout_width="wrap_content"-->
+                            <!--android:layout_height="wrap_content"-->
+                            <!--android:layout_marginStart="8dp"-->
+                            <!--android:layout_marginLeft="8dp"-->
+                            <!--app:cardCornerRadius="@dimen/card_corner_rad"-->
+                            <!--app:cardElevation="@dimen/card_elevation"-->
+                            <!--app:cardUseCompatPadding="true">-->
+
+                            <!--<TextView-->
+                            <!--android:id="@+id/spec_display"-->
+                            <!--style="@style/specItemStyle" />-->
+
+                            <!--</com.google.android.material.card.MaterialCardView>-->
+
+                            <!--<com.google.android.material.card.MaterialCardView-->
+                            <!--android:layout_width="wrap_content"-->
+                            <!--android:layout_height="match_parent"-->
+                            <!--app:cardCornerRadius="@dimen/card_corner_rad"-->
+                            <!--app:cardElevation="@dimen/card_elevation"-->
+                            <!--app:cardUseCompatPadding="true">-->
+
+                            <!--<TextView-->
+                            <!--android:id="@+id/spec_resolution"-->
+                            <!--style="@style/specItemStyle" />-->
+                            <!--</com.google.android.material.card.MaterialCardView>-->
+                            <!--</LinearLayout>-->
+                            <!--</HorizontalScrollView>-->
 
                         </LinearLayout>
+                    </com.google.android.material.card.MaterialCardView>
+
+                    <HorizontalScrollView
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content">
+
+                        <LinearLayout
+                            android:layout_width="match_parent"
+                            android:layout_height="wrap_content"
+                            android:orientation="horizontal">
+
+                            <com.google.android.material.card.MaterialCardView
+                                android:layout_width="wrap_content"
+                                android:layout_height="wrap_content"
+                                android:layout_marginStart="8dp"
+                                android:layout_marginLeft="8dp"
+                                app:cardCornerRadius="@dimen/card_corner_rad"
+                                app:cardElevation="@dimen/card_elevation"
+                                app:cardUseCompatPadding="true">
+
+                                <TextView
+                                    android:id="@+id/spec_size"
+                                    style="@style/specItemStyle" />
+
+                            </com.google.android.material.card.MaterialCardView>
+
+                            <com.google.android.material.card.MaterialCardView
+                                android:layout_width="wrap_content"
+                                android:layout_height="match_parent"
+                                app:cardCornerRadius="@dimen/card_corner_rad"
+                                app:cardElevation="@dimen/card_elevation"
+                                app:cardUseCompatPadding="true">
+
+                                <TextView
+                                    android:id="@+id/spec_weight"
+                                    style="@style/specItemStyle" />
+                            </com.google.android.material.card.MaterialCardView>
+
+                            <com.google.android.material.card.MaterialCardView
+                                android:layout_width="wrap_content"
+                                android:layout_height="match_parent"
+                                app:cardCornerRadius="@dimen/card_corner_rad"
+                                app:cardElevation="@dimen/card_elevation"
+                                app:cardUseCompatPadding="true">
+
+                                <TextView
+                                    android:id="@+id/spec_dimen"
+                                    style="@style/specItemStyle" />
+                            </com.google.android.material.card.MaterialCardView>
+                        </LinearLayout>
+                    </HorizontalScrollView>
 
                 </LinearLayout>
             </LinearLayout>
@@ -354,9 +402,9 @@
                 <com.google.android.material.card.MaterialCardView
                     android:id="@+id/wiki_card"
                     style="@style/card_style"
+                    android:minHeight="224dp"
                     app:cardCornerRadius="@dimen/card_corner_rad"
                     app:cardElevation="@dimen/card_elevation"
-                    android:minHeight="224dp"
                     app:cardUseCompatPadding="true">
 
                     <LinearLayout
