Remove commented out layouts and fix padding
2 small tweaks

--- a/app/src/main/res/layout/activity_detail.xml
+++ b/app/src/main/res/layout/activity_detail.xml
@@ -254,91 +254,13 @@
                                     android:layout_weight="1" />
 
                             </LinearLayout>
-
-                            <!--<HorizontalScrollView-->
-                            <!--android:layout_width="match_parent"-->
-                            <!--android:layout_height="wrap_content">-->
-
-                            <!--<LinearLayout-->
-                            <!--android:layout_width="match_parent"-->
-                            <!--android:layout_height="wrap_content"-->
-                            <!--android:orientation="horizontal">-->
-
-                            <!--<com.google.android.material.card.MaterialCardView-->
-                            <!--android:layout_width="wrap_content"-->
-                            <!--android:layout_height="wrap_content"-->
-                            <!--android:layout_marginStart="8dp"-->
-                            <!--android:layout_marginLeft="8dp"-->
-                            <!--app:cardCornerRadius="@dimen/card_corner_rad"-->
-                            <!--app:cardElevation="@dimen/card_elevation"-->
-                            <!--app:cardUseCompatPadding="true">-->
-
-                            <!--<TextView-->
-                            <!--android:id="@+id/spec_cpu"-->
-                            <!--style="@style/specItemStyle" />-->
-
-                            <!--</com.google.android.material.card.MaterialCardView>-->
-
-                            <!--<com.google.android.material.card.MaterialCardView-->
-                            <!--android:layout_width="wrap_content"-->
-                            <!--android:layout_height="match_parent"-->
-                            <!--app:cardCornerRadius="@dimen/card_corner_rad"-->
-                            <!--app:cardElevation="@dimen/card_elevation"-->
-                            <!--app:cardUseCompatPadding="true">-->
-
-                            <!--<TextView-->
-                            <!--android:id="@+id/spec_memory"-->
-                            <!--style="@style/specItemStyle" />-->
-                            <!--</com.google.android.material.card.MaterialCardView>-->
-                            <!--</LinearLayout>-->
-                            <!--</HorizontalScrollView>-->
-
-
-                            <!--<HorizontalScrollView-->
-                            <!--android:layout_width="match_parent"-->
-                            <!--android:layout_height="wrap_content"-->
-                            <!--android:paddingBottom="8dp">-->
-
-                            <!--<LinearLayout-->
-                            <!--android:layout_width="match_parent"-->
-                            <!--android:layout_height="wrap_content"-->
-                            <!--android:orientation="horizontal">-->
-
-                            <!--<com.google.android.material.card.MaterialCardView-->
-                            <!--android:layout_width="wrap_content"-->
-                            <!--android:layout_height="wrap_content"-->
-                            <!--android:layout_marginStart="8dp"-->
-                            <!--android:layout_marginLeft="8dp"-->
-                            <!--app:cardCornerRadius="@dimen/card_corner_rad"-->
-                            <!--app:cardElevation="@dimen/card_elevation"-->
-                            <!--app:cardUseCompatPadding="true">-->
-
-                            <!--<TextView-->
-                            <!--android:id="@+id/spec_display"-->
-                            <!--style="@style/specItemStyle" />-->
-
-                            <!--</com.google.android.material.card.MaterialCardView>-->
-
-                            <!--<com.google.android.material.card.MaterialCardView-->
-                            <!--android:layout_width="wrap_content"-->
-                            <!--android:layout_height="match_parent"-->
-                            <!--app:cardCornerRadius="@dimen/card_corner_rad"-->
-                            <!--app:cardElevation="@dimen/card_elevation"-->
-                            <!--app:cardUseCompatPadding="true">-->
-
-                            <!--<TextView-->
-                            <!--android:id="@+id/spec_resolution"-->
-                            <!--style="@style/specItemStyle" />-->
-                            <!--</com.google.android.material.card.MaterialCardView>-->
-                            <!--</LinearLayout>-->
-                            <!--</HorizontalScrollView>-->
-
                         </LinearLayout>
                     </com.google.android.material.card.MaterialCardView>
 
                     <HorizontalScrollView
                         android:layout_width="match_parent"
-                        android:layout_height="wrap_content">
+                        android:layout_height="wrap_content"
+                        android:paddingBottom="8dp">
 
                         <LinearLayout
                             android:layout_width="match_parent"
