--- a/app/src/main/res/drawable/bg_gradient_icon.xml
+++ b/app/src/main/res/drawable/bg_gradient_icon.xml
@@ -1,9 +1,8 @@
 <shape xmlns:android="http://schemas.android.com/apk/res/android"
     android:shape="rectangle">
     <gradient
-        android:angle="90"
-        android:centerColor="@color/green_500"
-        android:endColor="@color/green_300"
-        android:startColor="@color/green_700"
+        android:angle="270"
+        android:endColor="@color/color_primary"
+        android:startColor="@color/color_primary_dark"
         android:type="linear" />
 </shape>
