--- a/app/src/main/res/layout/activity_detail.xml
+++ b/app/src/main/res/layout/activity_detail.xml
@@ -73,7 +73,7 @@
                         android:id="@+id/chip_deviceinfo_label"
                         style="@style/ChipLabel"
                         android:layout_marginBottom="0dp"
-                        android:text="Device Info"
+                        android:text="@string/device_info"
                         app:chipBackgroundColor="@color/transparent"
                         app:chipStrokeColor="@color/black"
                         app:chipStrokeWidth="1dp" />
