--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -7,9 +7,9 @@
     <color name="black">#FF000000</color>
     <color name="transparent">#00000000</color>
 
-    <color name="color_primary">@color/green_500</color>
-    <color name="color_primary_dark">@color/green_700</color>
-    <color name="color_accent">@color/amber_500</color>
+    <color name="color_primary">#476600</color>
+    <color name="color_primary_dark">#364D00</color>
+    <color name="color_accent">#2E60C8</color>
     <color name="color_secondary">@color/teal_500</color>
     <color name="color_secondary_dark">@color/teal_700</color>
     <color name="colors_secondary_light">@color/teal_400</color>
