--- a/app/src/main/res/layout/list_item_favorites.xml
+++ b/app/src/main/res/layout/list_item_favorites.xml
@@ -37,7 +37,7 @@
                 android:layout_marginBottom="8dp"
                 android:gravity="center"
                 android:layout_below="@+id/avatar"
-                android:textAppearance="?textAppearanceBody1"/>
+                android:textAppearance="?textAppearanceHeadline6"/>
 
             <TextView
                 android:id="@+id/text_content"
