--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -15,6 +15,8 @@
     <color name="colors_secondary_light">@color/teal_400</color>
     <color name="window_background">#ffffffff</color>
 
+    <color name="special_teal">#007B89</color>
+
     <!-- Gradient Background Colors -->
     <color name="bluegrad_start">#64fdffff</color>
     <color name="bluegrad_mid">#64f3ffff</color>
