Refactors for Kotlin
Make use of Extension functions for findViewById, - so renamed ids to make them unique (probably a good practice anyway).

--- a/app/src/main/res/layout/list_item_favorites.xml
+++ b/app/src/main/res/layout/list_item_favorites.xml
@@ -22,7 +22,7 @@
             android:layout_height="wrap_content" >
 
             <ImageView
-                android:id="@+id/avatar"
+                android:id="@+id/device_item_avatar"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_margin="8dp"
@@ -36,7 +36,7 @@
                 android:layout_marginRight="16dp"
                 android:layout_marginBottom="8dp"
                 android:gravity="center"
-                android:layout_below="@+id/avatar"
+                android:layout_below="@+id/device_item_avatar"
                 android:textAppearance="?textAppearanceHeadline6"/>
 
             <TextView
