--- a/app/src/main/res/layout/list_item_device.xml
+++ b/app/src/main/res/layout/list_item_device.xml
@@ -10,7 +10,7 @@
     android:orientation="vertical">
 
     <ImageView
-        android:id="@+id/avatar"
+        android:id="@+id/device_item_avatar"
         android:layout_width="128dp"
         android:layout_height="wrap_content"
         android:transitionName="@string/transition_string" />
@@ -20,7 +20,7 @@
         android:layout_height="wrap_content"
         android:orientation="vertical">
         <TextView
-            android:id="@+id/list_title"
+            android:id="@+id/device_item_title"
             android:layout_width="match_parent"
             android:layout_height="36dp"
             android:autoSizeTextType="uniform"
@@ -28,7 +28,7 @@
             android:textAppearance="?textAppearanceHeadline6" />
 
         <TextView
-            android:id="@+id/list_subtext"
+            android:id="@+id/device_item_subtext"
             android:layout_width="match_parent"
             android:layout_height="24dp"
             android:autoSizeTextType="uniform"
