Kotlin changes and Add Interpolator to Motion Layout Example
This refactors a few things (using Lambdas) and also adds a simple interpolator to the MotionLayout Animation.

--- a/app/src/main/res/xml/complex_motion_scene.xml
+++ b/app/src/main/res/xml/complex_motion_scene.xml
@@ -6,6 +6,7 @@
     <Transition
         motion:constraintSetEnd="@+id/end"
         motion:constraintSetStart="@+id/start"
+        motion:interpolator="easeOut"
         motion:duration="1000">
         <OnSwipe
             motion:dragDirection="dragUp"
